trying to fix title spacing

--- a/css/people-styles.css
+++ b/css/people-styles.css
@@ -82,7 +82,7 @@ h1 {
 }
 h2 {
   font-size: 2em;
-  margin: 0px 0 0px;
+  margin: 18px 12px;
 }
 h3 {
   font-size: 1.4em;
